# POCs

./: README.md  _POCs.py  oai.py  pyproject.toml
.devcontainer/: devcontainer.json
pages/: 1_Planos_de_Ensino.py  briefing_planos_de_ensino.md
planos-ensino/pages/: 1_Planos_de_Ensino.py
